changing user stories

--- a/readme.me
+++ b/readme.me
@@ -1,6 +1,6 @@
 //USER STORIES:
 
-Sliding Puzzles .
+hippodrome game.
 As a beginner Web Developer , I want to create my first simple Game using Jquery and JavaScript.
 1.I am going to create small sliding puzzles game on my web page.
 
@@ -12,5 +12,5 @@ As a beginner Web Developer , I want to create my first simple Game using Jquery
  "сongratulation, you did it" or something.
 
 
-(that)
-https://wireframe.cc/kFt0Xf   ( i don't know what else should i add to the page yet, still thinking about it)
+
+https://wireframe.cc/kFt0Xf   ( i'am not really sure what else should be added  to this page yet, still thinking on it)
