Edited User story

--- a/readme.me
+++ b/readme.me
@@ -1,16 +1,18 @@
 //USER STORIES:
 
-hippodrome game.
-As a beginner Web Developer , I want to create my first simple Game using Jquery and JavaScript.
-1.I am going to create small sliding puzzles game on my web page.
+Hippodrome game.
+-------------------------------------------------------------------------------------------------------------------
+As a beginner Web Developer. I am going to build small Hippodrome game, using javascript, css and Jquery file.
 
-2.I am going to select random image from my array of image and than put it on the screen when user press START button.
+2.As a player i'll be able to place bets ( it's can be coins or something)
 
-3.I am going to customize my slider using css and html.
+3.As a player i will be able to pick a animal i think is going to win.
 
-4.Than when all my slides sets correctly i want to change a backgroung color with a some picture with text,
- "сongratulation, you did it" or something.
+4.As a player i should than press a start button.
+
+5.When my ride is finished, as a player i will be able to see results: Congratulation/Game message
 
 
 
-https://wireframe.cc/kFt0Xf   ( i'am not really sure what else should be added  to this page yet, still thinking on it)
+
+
