--- a/readme.me
+++ b/readme.me
@@ -12,6 +12,15 @@ As a beginner Web Developer. I am going to build small Hippodrome game, using ja
 
 5.When my ride is finished, as a player i will be able to see results: Congratulation/Game message
 
+6. As a player i am able to see my score result.
+
+7.As a player i am able to restart my game.
+
+ ISSUES :
+I had some troubles with a place bet function, it's not works it supposed to be.
+My code is not DRY, and need to be more cleaner. (but, hey).
+Has some problem with a jquery, and position element on my page.
+
 
 
 
